--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,69 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
 
+  <nav class="navbar navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Expense Tracker</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Options</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link" href="#">輸入花費</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">花費查詢</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">花費查詢(共筆)</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">設定</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">登出</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
 
-  {{{body}}}
-  
+  <div class="album mt-5 py-5 bg-light">
+    <div class="container">
+      {{!-- {{#if success_messages}}
+      <div class="alert alert-success" role="alert" style="margin: 30px 0 ;">
+        {{success_messages}}
+      </div>
+      {{/if}}
+      {{#if error_messages}}
+      <div class="alert alert-danger" role="alert" style="margin: 30px 0 ;">
+        {{error_messages}}
+      </div>
+      {{/if}} --}}
+
+      {{{body}}}
+    </div>
+  </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
