--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form class="row justify-content-center" action="/signup" method="POST" style="width: 100%;">
+<form class="row mx-0 justify-content-center" action="/signup" method="POST" style="width: 100%;">
   <div class="text-center mb-4">
     <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
   </div>
