add signUp function

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,11 +4,11 @@
   </div>
   <div class="form-label-group">
     <label for="inputAccount">Account</label>
-    <input id="inputAccount" type="text" name="Account" class="form-control" placeholder="Account" required autofocus>
+    <input id="inputAccount" type="text" name="account" class="form-control" placeholder="Account" required autofocus value="{{signUpInput.account}}">
   </div>
   <div class="form-label-group mt-2">
     <label for="inputEmail">Email(非必填)</label>
-    <input id="inputEmail" type="email" name="email" class="form-control" placeholder="Email">
+    <input id="inputEmail" type="email" name="email" class="form-control" placeholder="Email" value="{{signUpInput.email}}">
   </div>
   <div class="form-label-group mt-2">
     <label for="inputPassword">Password</label>
