--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -14,6 +14,6 @@
   <br />
   <button class="btn btn-lg btn-primary btn-block col-6 mt-4" type="submit">登入</button>
   <div class="text-end mb-4 ">
-    <p><a href="/signup" class="fs-3">註冊</a></p>
+    <p><a href="/signUp" class="fs-3">註冊</a></p>
   </div>
 </form>
