--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
               <a class="nav-link" href="#">設定</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">登出</a>
+              <a class="nav-link" href="/logout">登出</a>
             </li>
           </ul>
         </div>
