--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,10 +27,10 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" href="#">輸入花費</a>
+              <a class="nav-link" href="/costInput">輸入花費</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">花費查詢</a>
+              <a class="nav-link" href="/costQuery">花費查詢</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">花費查詢(共筆)</a>
