add new category function

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,4 +1,4 @@
-<form class="row justify-content-center m-0" action="/" method="POST" style="width: 100%;">
+<form class="row justify-content-center m-0" action="/costInput/category" method="POST" style="width: 100%;">
   <div class="text-center mb-4">
     <h1 class="h3 mb-3 font-weight-normal">新增類別</h1>
   </div>
