add costQuery-week function

--- a/views/costQuery.handlebars
+++ b/views/costQuery.handlebars
@@ -2,10 +2,10 @@
 
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="#">最近</a>
+      <a class="nav-link active" href="/costQuery">最近</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">每週</a>
+      <a class="nav-link" href="/costQuery/week">每週</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">每月</a>
