--- a/views/costQuery.handlebars
+++ b/views/costQuery.handlebars
@@ -8,7 +8,7 @@
       <a class="nav-link" href="/costQuery/week">每週</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">每月</a>
+      <a class="nav-link" href="/costQuery/month">每月</a>
     </li>
     <li class="nav-item">
       <a class="nav-link " href="#">範圍查詢</a>
