--- a/views/costQueryMonth.handlebars
+++ b/views/costQueryMonth.handlebars
@@ -1,11 +1,11 @@
 <div class="row mx-0 justify-content-start">
 
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs mb-2">
     <li class="nav-item">
       <a class="nav-link" href="#">最近</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link " href="#">每週</a>
+      <a class="nav-link" href="#">每週</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="#">每月</a>
@@ -15,73 +15,33 @@
     </li>
   </ul>
 
-  <table class="table table-striped mt-3">
+
+  <table class="table table-striped mt-0 mb-1">
     <thead>
       <tr>
-        <th scope="col">日期</th>
         <th scope="col">總額</th>
-        <th scope="col">類別</th>
-        <th scope="col">類別</th>
-        <th scope="col">類別</th>
-        <th scope="col">類別</th>
-        <th scope="col">類別</th>
+        <th scope="col">Top-1</th>
+        <th scope="col">Top-2</th>
+        <th scope="col">Top-3</th>
+        <th scope="col">Top-4</th>
+        <th scope="col">Top-5</th>
       </tr>
     </thead>
+
     <tbody>
+      {{#each sortResult}}
       <tr>
-        <th scope="row">2020/12/12
-          ~2020/12/12</th>
-        <td>qwdqw</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
+        <td scope="row" class="p-0" colspan=6>{{this.startDate}}</td>
       </tr>
       <tr>
-        <th scope="row">2020/12/12
-          ~2020/12/12</th>
-        <td>qwdqw</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
+        <td valign="middle">{{this.price}}</td>
+        {{#each this.category}}
+        <td>{{this.name}}: {{this.price}}<br>({{this.percentage}}%)</td>
+        {{/each}}
       </tr>
-      <tr>
-        <th scope="row">2020/12/12
-          ~2020/12/12</th>
-        <td>qwdqw</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-      </tr>
-      <tr>
-        <th scope="row">2020/12/12
-          ~2020/12/12</th>
-        <td>qwdqw</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-      </tr>
-      <tr>
-        <th scope="row">2020/12/12
-          ~2020/12/12</th>
-        <td>qwdqw</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-        <td>32</td>
-      </tr>
-
-
-
+      {{/each}}
     </tbody>
+
   </table>
 
 </div>
