--- a/views/costQuery.handlebars
+++ b/views/costQuery.handlebars
@@ -11,7 +11,7 @@
       <a class="nav-link" href="/costQuery/month">每月</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link " href="#">範圍查詢</a>
+      <a class="nav-link " href="/costQuery/range">範圍查詢</a>
     </li>
   </ul>
 
