--- a/views/costQueryRange.handlebars
+++ b/views/costQueryRange.handlebars
@@ -2,16 +2,16 @@
 
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" href="#">最近</a>
+      <a class="nav-link" href="/costQuery">最近</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link " href="#">每週</a>
+      <a class="nav-link " href="/costQuery/week">每週</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">每月</a>
+      <a class="nav-link" href="/costQuery/month">每月</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="#">範圍查詢</a>
+      <a class="nav-link active" href="/costQuery/range">範圍查詢</a>
     </li>
   </ul>
 
