--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#">花費查詢(共筆)</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">設定</a>
+              <a class="nav-link" href="/users/setting">設定</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">登出</a>
