--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
               <a class="nav-link" href="/costQuery">花費查詢</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">花費查詢(共筆)</a>
+              <a class="nav-link" href="/costQueryShare">花費查詢(共筆)</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/setting">設定</a>
