add costQuery-week(share) function

--- a/views/costQuery.handlebars
+++ b/views/costQuery.handlebars
@@ -1,6 +1,29 @@
 <div class="row mx-0 justify-content-start">
 
   <ul class="nav nav-tabs">
+  {{#if share}}
+    <li class="nav-item">
+      <a class="nav-link active" href="/costQueryShare">最近</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/costQueryShare/week">每週</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/costQueryShare/month">每月</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " href="/costQueryShare/range">範圍查詢</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " href="/costQueryShare/unrecorded">未入帳</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " href="/costQueryShare/unconfirmed">費用確認</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " href="/costQueryShare/returned">被退回</a>
+    </li>
+  {{else}}
     <li class="nav-item">
       <a class="nav-link active" href="/costQuery">最近</a>
     </li>
@@ -12,16 +35,6 @@
     </li>
     <li class="nav-item">
       <a class="nav-link " href="/costQuery/range">範圍查詢</a>
-    </li>
-  {{#if share}}
-    <li class="nav-item">
-      <a class="nav-link " href="/">未入帳</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " href="/">費用確認</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " href="/">被退回</a>
     </li>
   {{/if}}
   </ul>
