fix: add delete share user and restrict costinput page about share condition

--- a/views/costInput.handlebars
+++ b/views/costInput.handlebars
@@ -37,7 +37,7 @@
 
   <div class="form-label-group mt-3 align-self-center row justify-content-center align-content-center">
     <div class="p-2 text-center col-4 align-self-center row align-content-center justify-content-center">
-      <input id="shareCheck" type="checkbox" name="shareCheck" class="col-sm-6 col-xs-12 align-self-center" {{#if shareUser}}{{else}}disabled{{/if}}
+      <input id="shareCheck" type="checkbox" name="shareCheck" class="col-sm-6 col-xs-12 align-self-center" {{#if hasShareUser}}{{else}}disabled{{/if}}
         style="width:30px;height:30px;align-items: center;">
       <p class="col-sm-6 col-xs-12 align-self-center mb-0">Share</p>
     </div>
