--- a/views/setting.handlebars
+++ b/views/setting.handlebars
@@ -9,7 +9,7 @@
     </div>
   </div> --}}
 
-
+ {{> message}}
 
   <div class="form-label-group mt-3 align-self-center">
     <label for="account">帳號</label>
