--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,4 +1,5 @@
 <form class="row mx-0 justify-content-center" action="/signIn" method="POST" style="width: 100%;">
+  {{> message}}
   <div class="text-center mb-4">
     <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
   </div>
