--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,10 +12,11 @@
 </head>
 
 <body>
+  <div id="particles-js" style="z-index:-1;position:fixed;width:100%;height:100%;top:0;left:0;opacity:0.3;"></div>
 
   {{#if user.isAdmin}}
 
-  <nav class="navbar navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-light bg-light fixed-top" style="background-color:transparent!important">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Expense Tracker</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -37,14 +38,14 @@
       </div>
     </div>
   </nav>
-  <div class="album mt-5 py-5 bg-light">
+  <div class="album mt-5 py-5 bg-light" style="background-color:transparent!important">
     <div class="container">
       {{{body}}}
     </div>
   </div>
 
   {{else}}
-  <nav class="navbar navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-light bg-light fixed-top" style="background-color:transparent!important">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Expense Tracker</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -79,7 +80,7 @@
     </div>
   </nav>
 
-  <div class="album mt-5 py-5 bg-light">
+  <div class="album mt-5 py-5 bg-light" style="background-color:transparent!important">
     <div class="container">
       {{!-- {{#if success_messages}}
       <div class="alert alert-success" role="alert" style="margin: 30px 0 ;">
@@ -97,14 +98,14 @@
   </div>
   {{/if}}
 
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
   <script type="module" src="/javascripts/costConfirm.js"></script>
   <script type="module" src="/javascripts/message.js"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script type="module" src="/javascripts/particles.js"></script>
 </body>
 
 </html>
